--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ opencv_python==4.8.1.78
 pillow==10.0.1
 pytesseract==0.3.10
 scikit-image==0.22.0
+scikit-learn==1.7.2
 torch==2.0.0
 torchvision==0.15.1
